--- a/client/css/alicenode.css
+++ b/client/css/alicenode.css
@@ -11,25 +11,8 @@
     html { width:100%;height:100%;}
     body { width:100%;height:100%;}
 
-#serverMessages {
-    position: fixed;
-    top: 0;
-    right: 10%;
-    width: 40%;
-    height: 10%;
-    overflow: auto;
-    font-size: 8pt;     
-}
 
-#commit_detail {
-    position: fixed;
-    top: 0;
-    right: 0;
-    width: 50%;
-    height: 10%;
-    overflow: auto;
-    
-}
+
 #container {
     width: 100%; 
     height: 600px;
@@ -52,7 +35,21 @@
     /* background-color: lightblue; */
     /* transform: scaleY(-1); */
 }
-ul {
+
+
+#serverMessages {
+    position: fixed;
+    bottom: 0;
+    /* right: 10%; */
+    width: 100%;
+    /* height: 10%; */
+    overflow: auto;
+    font-size: 8pt; 
+    height: 17%;    
+}
+
+#messages {
+    float: left;
     color:#1bb700;
     font-weight: bold;
     background:#001623;
@@ -62,6 +59,17 @@ ul {
     width: 50%;
     overflow: scroll;
     height: 17%;
+}
     
-
-  }
+#commit_detail {
+    color:#19191b;
+    font-weight: bold;
+    background:#9da1a4;
+    position: fixed;
+    left: 52%;
+    width: 48%;
+    /* bottom: 100%;
+    width: 50%; */
+    height: 100%;
+    overflow: scroll;
+}
