--- a/client/cm/merge.css
+++ b/client/cm/merge.css
@@ -18,6 +18,7 @@
   display: inline-block;
   white-space: normal;
   vertical-align: top;
+  background: #e0e8ff;
 }
 .CodeMirror-merge-pane-rightmost {
   position: absolute;
