about to begin building a scrollable clickable list for viewing and choosing branches

--- a/client/css/alicenode.css
+++ b/client/css/alicenode.css
@@ -115,3 +115,11 @@
     background-color: #27A1CA; 
     box-shadow: 3px 6px 18px 0px rgba(0, 0, 0, 0.2);
 }
+
+#chooseBranch {
+    position: sticky;
+    left: 46%;
+    top: 0%;
+    width: 100px
+
+}
