--- a/client/css/alicenode.css
+++ b/client/css/alicenode.css
@@ -15,7 +15,7 @@
 
 #container {
     width: 100%; 
-    height: 600px;
+    height:450px;
 }
 
 #view{
@@ -33,7 +33,7 @@
     /* position: center; */
     /* overflow: scroll; */
     /* background-color: lightblue; */
-    /* transform: scaleY(-1); */
+    transform: scaleY(-1);
 }
 
 
@@ -117,9 +117,10 @@
 }
 
 #chooseBranch {
+    overflow:scroll;
     position: sticky;
-    left: 46%;
+    left: 0;
     top: 0%;
-    width: 100px
+    width: 34.3%
 
 }
