--- a/client/css/alicenode.css
+++ b/client/css/alicenode.css
@@ -1,6 +1,6 @@
 
 
-* { margin:0;padding: 0 }
+* { margin:0;padding: 0; text-decoration: none}
 
     .CodeMirror { line-height: 1 }
     @media screen and (min-width: 1300px) {
@@ -11,7 +11,9 @@
     html { width:100%;height:100%;}
     body { width:100%;height:100%;}
 
-
+th {
+    text-decoration: none
+}
 
 #container {
     width: 100%; 
@@ -37,30 +39,33 @@
 }
 
 
-#serverMessages {
-    position: fixed;
-    bottom: 0;
+/* #serverMessages { */
+    /* position: fixed; */
+    /* bottom: 0; */
     /* right: 10%; */
-    width: 100%;
+    /* width: 100%; */
     /* height: 10%; */
-    overflow: auto;
-    font-size: 8pt; 
-    height: 10%;    
-}
+    /* overflow: auto; */
+    /* font-size: 8pt;  */
+    /* height: 10%;     */
+/* } */
 
 #messages {
-    float: left;
+    /* float: left; */
     color:#1bb700;
     font-weight: bold;
     background:#001623;
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    width: 50%;
-    overflow: scroll;
-    height: 10%;
+    /* position: fixed; */
+    /* top: 0; */
+    /* left: 0; */
+    /* width: 50%; */
+    /* overflow: scroll; */
+    text-align: left;
+    overflow: auto;
+    font-size: 8pt; 
+    height: 100%;
 }
-    
+   
 #commit_detail {
     color:#19191b;
     font-weight: bold;
