--- a/cards/client/cm/codemirror.css
+++ b/cards/client/cm/codemirror.css
@@ -4,10 +4,13 @@
   /* Set height, width, borders, and global font properties here */
   font-family: monospace;
   height: 300px;
-  width: 40%;
+  width: 300px;
   align: left;
   color: black;
   direction: ltr;
+  box-shadow: 2px 3px 3px gray;
+  border-radius: 3px;
+  border: 1px solid black
 }
 
 /* PADDING */
@@ -47,7 +50,7 @@
 .CodeMirror-cursor {
   border-left: 1px solid black;
   border-right: none;
-  width: 2;
+  width: 4;
 }
 /* Shown when moving in bi-directional text */
 .CodeMirror div.CodeMirror-secondarycursor {
