--- a/cards/client/cm/codemirror.css
+++ b/cards/client/cm/codemirror.css
@@ -3,8 +3,8 @@
 .CodeMirror {
   /* Set height, width, borders, and global font properties here */
   font-family: monospace;
-  height: 300px;
-  width: 300px;
+  height: 100%;
+  width: 100%;
   align: left;
   color: black;
   direction: ltr;
