--- a/cards/client/css/cards.css
+++ b/cards/client/css/cards.css
@@ -3,12 +3,9 @@
     width: 100px;
     height: 100px;
     border: 1px solid black;
-
-}
-
-.note {
     box-shadow: 2px 3px 3px gray;
     border-radius: 3px;
-    background: $efeefe;
-    
-  }
+    background: rgb(201, 194, 194);
+
+
+}
