--- a/cards/client/css/cards.css
+++ b/cards/client/css/cards.css
@@ -1,11 +1,24 @@
 .card {
 
+    /* width: 100%;
+    height: 100px; */
+    border: 1px solid black;
+    box-shadow: 2px 3px 3px gray;
+    border-radius: 3px;
+    background: rgba(201, 194, 194, 0.116);
+
+
+}
+
+.frame {
+    text-align: center;
+
     width: 100px;
     height: 100px;
     border: 1px solid black;
     box-shadow: 2px 3px 3px gray;
     border-radius: 3px;
-    background: rgb(201, 194, 194);
+    background: rgb(13, 40, 116);
 
 
 }
