--- a/cards/client/css/cards.css
+++ b/cards/client/css/cards.css
@@ -11,7 +11,7 @@
 }
 
 .frame {
-    text-align: center;
+    /* text-align: center; */
 
     width: 100px;
     height: 100px;
@@ -22,3 +22,27 @@
 
 
 }
+
+table, th, td {
+    border: 1px solid black;
+ }
+
+h3 { text-decoration: none }
+/* tr:hover {
+    background-color: #f5f5f5;
+} */
+
+/* colour palettes: http://www.color-hex.com/color-palette/61389
+#7c5421	(124,84,33)
+#4d3414	(77,52,20)
+#19334f	(25,51,79)
+#ff1a1a	(255,26,26)
+#f5f621	(245,246,33)
+ */
+
+ /* colour palette 2: http://www.color-hex.com/color-palette/61336
+ #daeef4	(218,238,244)
+#ec6249	(236,98,73)
+#112b36	(17,43,54)
+#eec239	(238,194,57)
+#b3d7df	(179,215,223) */
