--- a/client/css/alicenode.css
+++ b/client/css/alicenode.css
@@ -71,7 +71,7 @@ th {
 #chat_form {background: #000; padding: 3px; position: fixed; width: 43.2%; }
 #chat_form input {border: 0; padding: 10px; width: 86%; margin-right: .5%; }
 #chat_form button {width: 10%; background: rgb(130, 224, 255); border: none; padding: 10px; }
-#chat_messages {list-style-type: none; margin: 5px; padding: 0; }
+#chat_messages {list-style-type: none; margin: 5px; padding: 0; overflow: scroll;}
 #chat_messages li {padding: 0px 0px; font: 12px Helvetica Arial; text-align: left}
 #chat_messages li:nth-child(odd) { background: #eee; }
 #chat_messages { margin-top: 0px }
