--- a/client/css/alicenode.css
+++ b/client/css/alicenode.css
@@ -62,7 +62,7 @@ th {
     text-align: left;
     overflow: auto;
     font-size: 8pt; 
-    height: 100%;
+    height: 300px;
 }
 /* chat messages */
 /* * { margin: 0; padding: 0;  } */
