--- a/client/css/alicenode.css
+++ b/client/css/alicenode.css
@@ -53,7 +53,18 @@ th {
     /* height: 10%;     */
 /* } */
 
+.chatFooter{
+    height: 32%;
+    bottom: 0px;
+    width: 100%;
+}
 
+#chatHeader{
+    float: left; 
+    width: calc(50% - 10px); 
+    margin: 5px;
+    height: calc(100% - 36px);
+}
 #terminal {
     color:#1bb700;
     font-weight: bold;
@@ -64,14 +75,14 @@ th {
     /* overflow: scroll; */
     text-align: left;
     overflow: auto;
-    font-size: 8pt; 
-    height: 100%;
+    font-size: 8pt;
+    height: calc(100% - 26px);
 }
 /* chat messages */
 /* * { margin: 0; padding: 0;  } */
 /* body { font: 13px Helvetica, Arial; } */
-#chat_form {background: #000; padding: 3px; position: absolute; bottom: 0px; width: 43.2%; }
-#chat_form input {border: 0; padding: 10px; width: 86%; margin-right: .5%; }
+#chat_form {background: #000; padding: 3px; bottom: 0px; width: 100%; }
+#chat_form input {border: 0; padding: 10px; width: 86%;}
 #chat_form button {width: 10%; background: rgb(130, 224, 255); border: none; padding: 10px; }
 #chat_messages {
     list-style-type: none; 
@@ -80,9 +91,12 @@ th {
     overflow: auto; 
     width: 100%;
     margin-top: 0px;
-    height: 100%;
+    height: calc(100% - 26px);
 }
-#chat_messages li {padding: 0px 0px; font: 12px Helvetica Arial; text-align: left;}
+#chat_messages li {
+    font: 12px Helvetica Arial; 
+    text-align: left;
+}
 #chat_messages li:nth-child(odd) { background: #eee; }
    
 #commit_detail {
