--- a/client/css/alicenode.css
+++ b/client/css/alicenode.css
@@ -163,3 +163,13 @@ th {
     width: 34.3%
 
 }
+#search1, #search2, #search3 {
+    float: right;
+}
+
+#fileInCommit{
+    max-width: 70%;
+    float: left;
+    padding: 0;
+    margin: 0;
+}
