--- a/cards/client/css/cards.css
+++ b/cards/client/css/cards.css
@@ -29,6 +29,14 @@ table, th, td {
  }
 
 h3 { text-decoration: none }
+
+/* .CodeMirror {
+    width: 100% !important;
+    height: 100% !important;
+}  */
+
+/* .CodeMirror { width: 100%; }
+.CodeMirror-scroll { height: 500px; } */
 /* tr:hover {
     background-color: #f5f5f5;
 } */
