--- a/cards/client/css/alicenode.css
+++ b/cards/client/css/alicenode.css
@@ -1,6 +1,9 @@
 
 
-* { margin:0;padding: 0; text-decoration: none}
+* { margin:0;
+    padding: 0; 
+    text-decoration: none;
+  }
 
     .CodeMirror { line-height: 1 }
     @media screen and (min-width: 1300px) {
@@ -8,8 +11,8 @@
         #nav { border-right: 499px solid transparent; }
         }
     
-    html { width:100%;height:100%;}
-    body { width:100%;height:100%;}
+html { width:100%;height:100%;  background-color: rgb(233, 233, 233)}
+body { width:100%;height:100%; background-color: rgb(233, 233, 233)}
 
 th {
     text-decoration: none
@@ -50,21 +53,52 @@ th {
     /* height: 10%;     */
 /* } */
 
-#messages {
-    /* float: left; */
+.chatFooter{
+    height: 29%;
+    bottom: 0px;
+    width: 100%;
+}
+
+#chatHeader{
+    float: left; 
+    width: calc(50% - 10px); 
+    margin: 5px;
+    height: calc(100% - 36px);
+}
+#terminal {
     color:#1bb700;
     font-weight: bold;
-    background:#001623;
+    background-color:#001623;
     /* position: fixed; */
     /* top: 0; */
     /* left: 0; */
-    /* width: 50%; */
     /* overflow: scroll; */
     text-align: left;
     overflow: auto;
-    font-size: 8pt; 
-    height: 100%;
+    font-size: 8pt;
+    height: calc(100% - 26px);
+    padding: 2px 5px 2px 5px;
 }
+/* chat messages */
+/* * { margin: 0; padding: 0;  } */
+/* body { font: 13px Helvetica, Arial; } */
+#chat_form {background: #000; padding: 3px; bottom: 0px; width: 100%; }
+#chat_form input {border: 0; padding: 10px; width: 86%;}
+#chat_form button {width: 10%; background: rgb(130, 224, 255); border: none; padding: 10px; }
+#chat_messages {
+    list-style-type: none; 
+    margin: 5px; 
+    padding: 0; 
+    overflow: auto; 
+    width: 100%;
+    margin-top: 0px;
+    height: calc(100% - 26px);
+}
+#chat_messages li {
+    font: 12px Helvetica Arial; 
+    text-align: left;
+}
+#chat_messages li:nth-child(odd) { background: #eee; }
    
 #commit_detail {
     color:#19191b;
